fix whitespace on quote attributions
- manually adjust line breaks for names that are too long

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -98,6 +98,8 @@ article:hover .extra, header:hover .extra {
     display: table-cell;
     vertical-align: baseline;
 
+    white-space: nowrap;
+
     text-align: right;
     font-weight: bold;
 }
